# osmia

./: .dockerignore  .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENCE  Makefile  README.md  SECURITY.md  buf.gen.yaml  buf.yaml  docker-compose.yaml  go.mod  go.sum  index.html  index.yaml  mkdocs.yml  osmia-0.0.0-edge.tgz  oss-plan.md  oss-prd.md  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  cr.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  plugin_request.md
.github/workflows/: ci.yaml  docs.yaml  images.yaml  release.yaml
api/: index.html
api/plugins/: index.html
api/webhooks/: index.html
architecture/: index.html
changelog/: index.html
charts/osmia/: Chart.yaml  values.yaml
charts/robodev/: Chart.yaml  values.yaml
cmd/osmia/: init_test.go  main.go
cmd/robodev/: init_test.go  main.go
code-of-conduct/: index.html
concepts/diagnosis/: index.html
concepts/engines/: index.html
concepts/estimator/: index.html
concepts/guardrails-overview/: index.html
concepts/llm/: index.html
contributing/: index.html
docs/: architecture.md  contributing.md  getting-started.md  guardrails.md  index.md  roadmap.md  scaling.md  security-policy.md  security.md
examples/plugins/example-jira-python/: Dockerfile  README.md  pyproject.toml
examples/plugins/example-jira-python/osmia_plugin_jira/: __init__.py  __main__.py
examples/plugins/example-jira-python/robodev_plugin_jira/: __init__.py  __main__.py
getting-started/: index.html
guardrails/: index.html
hack/: install-hooks.sh  kind-config.yaml  run-integration-tests.sh  setup-secrets.sh  shortcut-list-states.sh  values-dev.yaml  values-live-local.yaml  values-live.yaml
proto/: approval.proto  common.proto  engine.proto  notifications.proto  review.proto  scm.proto  secrets.proto  ticketing.proto
roadmap/: index.html
scaling/: index.html
scripts/: install-deps.sh
sdk/python/: README.md  pyproject.toml
sdk/python/examples/ticketing/: main.py
sdk/python/src/osmia/: __init__.py  plugin.py
sdk/python/src/robodev/: __init__.py  plugin.py
search/: search_index.json
security/: index.html
security-policy/: index.html
(+319 files in other folders)
