[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "robodev-plugin-sdk"
version = "0.1.0"
description = "Python SDK for building RoboDev plugins"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
]

[project.urls]
Homepage = "https://github.com/unitaryai/robodev"
Documentation = "https://unitaryai.github.io/robodev/plugins/writing-a-plugin/"
