[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "osmia-plugin-sdk"
version = "0.1.0"
description = "Python SDK for building Osmia plugins"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
dependencies = [
    "grpcio>=1.60",
    "grpcio-tools>=1.60",
    "protobuf>=4.25",
]

[project.urls]
Homepage = "https://github.com/unitaryai/osmia"
Documentation = "https://unitaryai.github.io/osmia/plugins/writing-a-plugin/"
