[project]
name = "osmia-plugin-jira"
version = "0.1.0"
description = "Jira ticketing backend plugin for Osmia"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
dependencies = [
    "osmia-plugin-sdk>=0.1.0",
    "requests>=2.31.0",
]

[project.scripts]
osmia-plugin-jira = "osmia_plugin_jira.__main__:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
